--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/me.jpg" alt="Heeyoung" />
 								</a>
 							</article>
 
@@ -52,19 +52,19 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://creamtoby.github.io/VideoBackgroundProject/" class="image fit" target="_blank"><img src="images/pic01.jpg" alt="">VideoBackgroundProject</a>
+											<a href="https://creamtoby.github.io/VideoBackgroundProject/" class="image fit" target="_blank"><img src="images/pic01.jpg" alt="videoBackgroundProject">VideoBackgroundProject</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://creamtoby.github.io/LePainProject/" class="image fit" target="_blank"><img src="images/pic02.jpg" alt="">LePainProject</a>
+											<a href="https://creamtoby.github.io/LePainProject/" class="image fit" target="_blank"><img src="images/pic02.jpg" alt="lePainProject">LePainProject</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://creamtoby.github.io/FullWebpageProject/" class="image fit" target="_blank"><img src="images/pic03.jpg" alt="">FullWebpageProject</a>
+											<a href="https://creamtoby.github.io/FullWebpageProject/" class="image fit" target="_blank"><img src="images/pic03.jpg" alt="fullWebpageProject">FullWebpageProject</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://creamtoby.github.io/SurveyForm/" class="image fit" target="_blank"><img src="images/pic04.jpg" alt="">SurveyForm</a>
+											<a href="https://creamtoby.github.io/SurveyForm/" class="image fit" target="_blank"><img src="images/pic04.jpg" alt="surveyForm">SurveyForm</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://creamtoby.github.io/TributePage/" class="image fit" target="_blank"><img src="images/pic05.jpg" alt="tributePage">TributePage</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
