--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											<a href="https://creamtoby.github.io/TributePage/" class="image fit" target="_blank"><img src="images/pic05.jpg" alt="tributePage">TributePage</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="https://creamtoby.github.io/PasswordGenerator/" class="image fit"><img src="images/pic06.jpg" alt="">PasswordGenerator</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
