--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 											<a href="https://creamtoby.github.io/PasswordGenerator/" class="image fit" target="_blank"><img src="images/pic06.jpg" alt="PasswordGenerator">PasswordGenerator</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://creamtoby.github.io/Testimonials/" class="image fit" target="_blank"><img src="images/pic07.jpg" alt="Testimonials">Testimonials grid</a>
+											<a href="https://creamtoby.github.io/Testimonials/" class="image fit" target="_blank"><img src="images/pic07.jpg" alt="Testimonials">TestimonialsGrid</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit" target="_blank"><img src="images/pic08.jpg" alt=""></a>
+											<a href="https://creamtoby.github.io/PizzeriaProject/" class="image fit" target="_blank"><img src="images/pic08.jpg" alt="">PizzeriaProject</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit" target="_blank"><img src="images/pic09.jpg" alt=""></a>
